[package]
name = "tes3map"
version = "0.1.0"
authors = ["Moritz Baron <r.fuzzo@gmail.com>"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.25.0"
eframe = { version = "0.25.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
rfd = "0.13"
palette = "0.7"
image = "0.24"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
