[package]
name = "tes3map"
version = "0.3.1"
authors = ["Moritz Baron <r.fuzzo@gmail.com>"]
edition = "2021"

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
simple-logging = "2.0"
rfd = "0.15"
palette = "0.7"
image = "0.25"
serde_json = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
seahash = "4.1"

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
default-features = false
features = ["esp"]                         # add "nif" only if you need it

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

env_logger = "0.11"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
